--- a/pages/core.mdx
+++ b/pages/core.mdx
@@ -9,7 +9,7 @@ The typical workflow would look something like this:
 
 ## Chat Endpoint Configurations
 
-To configure a chat endpoint, we need to provide an object with the configurations for the endpoint. These configurations include the endpoint name, the configurations for chat history, cache, RAG, and more. You can use the `ChatEndpointConfig` type provided by QvikChat to define these configurations.
+To configure a chat endpoint, we need to provide an object with the configurations for the endpoint. These configurations include the endpoint name, the configurations for chat history, cache, RAG, and more. You can use the `ChatEndpointConfig` type provided by QvikChat to define these configurations. To learn more about the different configurations that you can provide, check the [Chat Endpoint Configurations](/chat-endpoints/chat-endpoint-configurations) section.
 
 Below is an example of how you can define the configurations for a chat endpoint that supports chat history, response caching, and Retrieval Augmented Generation (RAG). For more information and to see the full code, check the tutorial on building [Production-ready chatbot on your data in under 10 minutes using QvikChat](https://www.pkural.ca/blog/posts/qvikchat-rag-chatbot).
 
